Добавление файла сетки и нормалайз

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Подключение Normalize.css -->
+    <!--  <link rel="stylesheet" href="build/libs/normalize.css"> -->
+    <!-- Если необходимо, то подключаем сетку от Bottstrap 4 -->
+    <link rel="stylesheet" href="build/libs/bootstrap-grid.min.css">
+    <!-- Пользовательские стили -->
     <link rel="stylesheet" href="build/css/style.css">
     <title>Заголовок</title>
 </head>
 
 <body>
+
 
 </body>
 
