--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Подключение Normalize.css -->
-    <!--  <link rel="stylesheet" href="build/libs/normalize.css"> -->
+    <link rel="stylesheet" href="build/libs/normalize.css">
     <!-- Если необходимо, то подключаем сетку от Bottstrap 4 -->
     <link rel="stylesheet" href="build/libs/bootstrap-grid.min.css">
     <!-- Пользовательские стили -->
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
 
 
 </body>
